migrated to quarkus s3 client